src/objects/MUSW__Violation__c.object
<CustomObject>
    <description>Violation cited on Complaints</description>
    <fields>
        <fullName>Abatement_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Abatement Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cited_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_to_correct_User_defined__c</fullName>
        <label>Days to correct - User defined</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_correct__c</fullName>
        <formula>IF( isblank(Days_to_correct_User_defined__c) , MUSW__Type__r.Days_to_correct__c, Days_to_correct_User_defined__c)</formula>
        <label>Days to correct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>MUSW__Type__r.MUSW__Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(Contains(Text( MUSW__Status__c) , &quot;Closed&quot;),

&quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Citation_Amount__c</fullName>
        <description>Deprecated.</description>
        <label>Citation Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Cited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <label>Cited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Violations_Cited</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Cited_Date__c</fullName>
        <description>Deprecated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Comments_Long__c</fullName>
        <description>Longer field that replaces the 255 character comments field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Comments__c</fullName>
        <description>Deprecated; replaced by Description.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated complaint record.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Compliance_Due_Date__c</fullName>
        <description>Due date for the violation to be closed (abated); this is often used in letters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Corrected_Date__c</fullName>
        <description>Date violation was actually closed (abated).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Dangerous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can be used for reporting and prioritization of reinspections; this is not referenced in the default configuration.</description>
        <label>Dangerous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_Till_Corrected__c</fullName>
        <description>Used for reports.</description>
        <formula>IF( ISNULL(MUSW__Corrected_Date__c) , NULL,   (NOW() - CreatedDate) - (TODAY() - MUSW__Corrected_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Till Corrected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_Till_Due__c</fullName>
        <description>Used for reports.</description>
        <formula>IF( ISNULL( MUSW__Compliance_Due_Date__c ) , NULL, (MUSW__Compliance_Due_Date__c - TODAY() ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Till Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Estimated_Cost__c</fullName>
        <description>Can be used where cost recovery is estimated for violation clean up; this is not referenced in the default configuration.</description>
        <label>Estimated Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Inspection_Number__c</fullName>
        <description>This counts the number of times a violation has been inspected and reinspected; this is used in the default configuration.</description>
        <label>Inspection Number</label>
        <summaryForeignKey>MUSW__Inspection_Violation__c.MUSW__Violation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MUSW__Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated parcel record.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allegation</fullName>
                    <default>true</default>
                    <label>Allegation</label>
                </value>
                <value>
                    <fullName>Finding</fullName>
                </value>
                <value>
                    <fullName>Charged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary descriptor of the violation. Unlike most type fields in the system, this is a lookup to the ordinance table rather than a picklist.</description>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MUSW__Violation_Type__c.MUSW__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MUSW__Violation_Type__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordinance__c</fullName>
        <formula>MUSW__Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordinance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Violation Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Violation</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VI-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspection</fullName>
        <active>true</active>
        <label>Inspection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>